# ultimate-error-codes

./: README.md  meson.build
include/: error.h
include/error/: example_errors.h  global_errors.h  main_errors.h  modules.h
src/: error.c  example.c  main.c
